Changed the site

--- a/index.html
+++ b/index.html
@@ -1,116 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cars World</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <div class="header">
-        <header>
-            <div class="logo">
-                <img src="images/logo.webp" alt="">
+    <header class="nav-header">
+        <a href="#" class="logo">
+            <img src="images/logo.png" alt="Logo">
+        </a>
+        <h1>Where Luxury Meets Performance</h1>
+        <nav>
+            <nav>
+                <ul>
+                    <li><a href="#"><i class="fas fa-info-circle"></i></a></li>
+                    <li><a href="#"><i class="fas fa-home"></i></a></li>
+                    <li><a href="#"><i class="fas fa-sign-in-alt"></i></a></li>
+                    <li><a href="#"><i class="fas fa-user-plus" aria-hidden="true"></i></a></li>
+                </ul>
+            </nav>
+            <nav>
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Log in</a></li>
+                    <li><a href="#">Sign up</a></li>
+                </ul>
+            </nav>
+        </nav>
+    </header>
+    <div class="site-banner">
+        <div class="banner-img">
+            <img src="images/lamborghini-huracan.jpg" alt="">
+        </div>
+        <div class="banner-img">
+            <img src="images/gtr-35.jpg" alt="">
+        </div>
+        <div class="banner-img">
+            <img src="images/serjan-midili--tMDG1xRhnQ-unsplash.jpg" alt="">
+        </div>
+    </div>
+    <div class="info-section">
+        <h1>Danov's Auto Show</h1>
+        <div class="paragraphs">
+            <p><i class="fas fa-check-circle"></i> Discover the ultimate fusion of luxury and performance at Danov's
+                auto show.</p>
+            <p><i class="fas fa-check-circle"></i> Experience the thrill of witnessing the finest luxury vehicles on
+                display.</p>
+            <p><i class="fas fa-check-circle"></i> Immerse yourself in the world of top-tier sports automobiles and
+                supercars.</p>
+            <p><i class="fas fa-check-circle"></i> Explore an exquisite showcase of the most sought-after automotive
+                craftsmanship.</p>
+            <p><i class="fas fa-check-circle"></i> Indulge in the elegance and power of the best luxury and sports cars
+                in the industry.</p>
+
+            <a href="#" class="cta-button">Check Now</a>
+        </div>
+    </div>
+    <div class="cars-container">
+        <h1>Small Preview of the Auto Show</h1>
+    </div>
+    <div class="cars-container">
+        <div class="car-card">
+            <div class="img-container">
+                <img src="images/g65.jpg" alt="">
             </div>
-            <nav>
-                <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">MEMBERS</a></li>
-                    <li><a href="#">NEWS & EVENTS</a></li>
-                </ul>
-            </nav>
-        </header>
-        <section class="header-text">
-            <h1>About the</h1>
-            <h1>Communication Company</h1>
-            <h1>Business Association</h1>
-            <p>In a eleifend ipsum. Proin eu elementum nunc, vel congue mi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean nunc ipsum, fringilla eu posuere ac, facilisis eu lorem. Nullam lacinia eros arcu. Proin sed hendrerit erat.
-            </p>
-        </section>
-    </div>
-    <div class="main-info-1">
-        <div class="main-info-1-text">
-            <h1>Business Aims</h1>
-            <p>In a eleifend ipsum. Proin eu elementum nunc, vel congue mi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean nunc ipsum, 
-                fringilla eu posuere ac, facilisis eu lorem. Nullam lacinia eros arcu. Proin sed hendrerit erat.</p>
-            <form action="#">
-                <button>More Information</button>
-            </form>
-        </div>
-        <div class="main-info-1-text">
-            <h1>Objectives</h1>
-            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis interdum facilisis arcu in tempus. Proin odio elit, ultrices nec varius id, tincidunt eget tellus. Aenean eleifend ultrices dignissim. Quisque interdum lobortis elementum.
-            </p>
-            <form action="#">
-                <button>More Information</button>
-            </form>
-        </div>    
-    </div>
-    <div class="sponsors">
-        <div class="sponsors-text">
-            <h1>Sponsors</h1>
-            <p>Fusce vel eros ut lorem vehicula accumsan vel vitae leo. Nulla maximus elit orci, quis sagittis eros luctus ut. Duis in orci scelerisque odio blandit imperdiet. Praesent convallis lacus nec lorem pellentesque pretium.
-            </p>
-        </div>
-        <div class="sponsors-imgs">
-            <div class="sponsors-img">
-                <img src="images/sponsor1.webp" alt="">
-            </div>
-            <div class="sponsors-img">
-                <img src="images/sponsor2.webp" alt="">
+            <div class="car-info">
+                <h2>2023 MERCEDES-AMG G63 BRABUS 800</h2>
+                <p><i class="fas fa-tools"></i> Engine: 4.0-litre twin-turbo V8</p>
+                <p><i class="fas fa-cog"></i> Transmission: 9-Speed Automatic</p>
+                <p><i class="fas fa-bolt"></i> Power: 588 kW / 800 hp</p>
+                <p><i class="fas fa-cogs"></i> Torque: 1000 Nm</p>
+                <p><i class="fas fa-tachometer-alt"></i> 0-100 km/h(80 mph): 4.1 s</p>
+                <p><i class="fas fa-gas-pump"></i> Fuel Economy Combined: 13.1 l/100km</p>
+                <p><i class="fas fa-tachometer-alt"></i> Max speed (Limited): 240 km/h (150 mph)</p>
             </div>
         </div>
-        <div class="sponsors-text">
-            <h1>Partners</h1>
-            <p>Phasellus ultrices nisl magna, a vehicula tellus tristique a. Nunc ac risus turpis. Morbi maximus magna libero, cursus consequat diam laoreet blandit.
-            </p>
+        <div class="car-card">
+            <div class="img-container">
+                <img src="images/X6.jpg" alt="">
+            </div>
+            <div class="car-info">
+                <h2>2022 BMW X6 M MANHART EDITION</h2>
+                <p><i class="fas fa-tools"></i> Engine: 4.4-litre biturbo V8</p>
+                <p><i class="fas fa-cog"></i> Transmission: 8-Speed Automatic</p>
+                <p><i class="fas fa-bolt"></i> Power: 536 kW / 730 hp</p>
+                <p><i class="fas fa-cogs"></i> Torque: 900 Nm</p>
+                <p><i class="fas fa-tachometer-alt"></i> 0-100 km/h(80 mph): 3.8 s</p>
+                <p><i class="fas fa-gas-pump"></i> Fuel Economy Combined: 12.1 l/100km</p>
+                <p><i class="fas fa-tachometer-alt"></i> Max speed: 290 km/h (180 mph)</p>
+            </div>
+        </div>
+        <div class="car-card">
+            <div class="img-container">
+                <img src="images/urus.jpg" alt="">
+            </div>
+            <div class="car-info">
+                <h2>2022 LAMBORGHINI URUS MANSORY ENDITION</h2>
+                <p><i class="fas fa-tools"></i> Engine: 4.0-litre twin-turbo V8</p>
+                <p><i class="fas fa-cog"></i> Transmission: 8-Speed Automatic</p>
+                <p><i class="fas fa-bolt"></i> Power: 625 kW / 850 hp</p>
+                <p><i class="fas fa-cogs"></i> Torque: 1000 Nm</p>
+                <p><i class="fas fa-tachometer-alt"></i> 0-100 km/h(80 mph): 3.3 s</p>
+                <p><i class="fas fa-gas-pump"></i> Fuel Economy Combined: 14.5 l/100km</p>
+                <p><i class="fas fa-tachometer-alt"></i> Max speed: 320 km/h (200 mph)</p>
+            </div>
         </div>
     </div>
-    <div class="footer">
-        <footer class="first-part">
-            <nav>
-                <ul>
-                    <li>Address</li>
-                    <li><a href="#">BLorem ipsum dolor sit amet</a></li>
-                    <li><a href="#">consectetur adipiscing elit.</a></li>
-                    <li><a href="#">Fusce sed quam accumsan</a></li>
-                    <li><a href="#">lacinia odio a</a></li>
-                    <li><a href="#">porta enim.</a></li>
-                    <li><a href="#">In sed arcu sed elit</a></li>
-                    <li><a href="#">dictum sodales ultricies a dolor.</a></li>
-                </ul>
-            </nav>
-            <nav>
-                <ul>
-                    <li>Statues and Policies</li>
-                    <li><a href="#">Statutes</a></li>
-                    <li><a href="#">Code of Ethics Policy</a></li>
-                    <li><a href="#">Board Responsibilities and Obligations</a></li>
-                    <li><a href="#">Annual Finance Report 2023</a></li>
-                </ul>
-            </nav>
-            <nav>
-                <ul>
-                    <li>Resources</li>
-                    <li><a href="#">First Call</a></li>
-                    <li><a href="#">Matchmaker</a></li>
-                    <li><a href="#">Business Information</a></li>
-                    <li><a href="#">Publications</a></li>
-                </ul>
-            </nav>
-            <nav>
-                <ul>
-                    <li>Mobile Apps</li>
-                    <li><a href="#">Statutes</a></li>
-                    <li><a href="#">Code of Ethics Policy</a></li>
-                    <li><a href="#">Annual Finance Report 2023</a></li>
-                </ul>
-            </nav>
-        </footer>
-        <footer>
-            <p>Copyright 2023</p>
-        </footer>
-    </div>
+    <footer class="footer-section">
+        <h3>NEWSLETTER</h3>
+        <p>Subscribe to our Newsletter!</p>
+        <div class="subscribe-form">
+            <input type="email" placeholder="Your Email Address">
+            <button>Subscribe</button>
+        </div>
+        <div class="copyright-section">
+            <p>&copy; 2023 Danov's Auto Show. All rights reserved.</p>
+        </div>
+    </footer>    
 </body>
+
 </html>
