Made the navigation bar responsive

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         </a>
         <h1>Where Luxury Meets Performance</h1>
         <nav>
+            <i class="fas fa-bars"></i>
+            Menu
+        </nav>
+        <nav>
             <nav>
                 <ul>
                     <li><a href="#"><i class="fas fa-info-circle"></i></a></li>
