Hided menu icon in bigger resolutions

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Where Luxury Meets Performance</h1>
         <nav>
             <i class="fas fa-bars"></i>
-            Menu
+            <span>Menu</span>
         </nav>
         <nav>
             <nav>
