--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li><a class="menuItem" href="#" onclick="setHamburgerRelative(event)"><i class="fas fa-info-circle"></i> About</a></li>
                 <li><a class="menuItem" href="#" onclick="setHamburgerRelative(event)"><i class="fas fa-home"></i> Home</a></li>
                 <li><a class="menuItem" href="#" onclick="setHamburgerRelative(event)"><i class="fas fa-sign-in-alt"></i> Log in</a></li>
+                <li><a class="menuItem" href="#" onclick="setHamburgerRelative(event)"><i class="fas fa-car"></i> Auto Show</a></li>
                 <li><a class="menuItem" href="#" onclick="setHamburgerRelative(event)"><i class="fas fa-user-plus" aria-hidden="true"></i> Sign up</a></li>
             </ul>
         </div>
@@ -34,6 +35,7 @@
                 <ul>
                     <li><a href="#"><i class="fas fa-info-circle"></i></a></li>
                     <li><a href="#"><i class="fas fa-home"></i></a></li>
+                    <li><a href="#"><i class="fas fa-car"></i></a></li>
                     <li><a href="#"><i class="fas fa-sign-in-alt"></i></a></li>
                     <li><a href="#"><i class="fas fa-user-plus" aria-hidden="true"></i></a></li>
                 </ul>
@@ -42,6 +44,7 @@
                 <ul>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Home</a></li>
+                    <li><a href="#">Auto Show</a></li>
                     <li><a href="#">Log in</a></li>
                     <li><a href="#">Sign up</a></li>
                 </ul>
@@ -150,6 +153,13 @@
         <div class="subscribe-form">
             <input type="email" placeholder="Your Email Address">
             <button>Subscribe</button>
+        </div>
+        <div class="socials-section">
+            <span>Socials: </span>
+            <a href="https://www.facebook.com/profile.php?id=100005977189177" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://github.com/DenisDanov" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.instagram.com/denisdanov69/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <!-- Add other social media icons or links as needed -->
         </div>
         <div class="copyright-section">
             <p>&copy; 2023 Danov's Auto Show. All rights reserved.</p>
