--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="site-banner">
         <div class="site-banner-inner">
             <div class="banner-img">
-                <img src="images/lamborghini-huracan.jpg" alt="">
+                <img src="images/porshe.jpg" alt="">
             </div>
             <div class="banner-img">
                 <img src="images/gtr-35.jpg" alt="">
@@ -89,6 +89,12 @@
             </div>
             <div class="banner-img">
                 <img src="images/gtr-35.jpg" alt="">
+            </div>
+            <div class="banner-img">
+                <img src="images/porshe.jpg" alt="">
+            </div>
+            <div class="banner-img">
+                <img src="images/photo-1577714141096-bf2b9e69500a.webp" alt="">
             </div>
             <div class="banner-img">
                 <img src="images/porshe.jpg" alt="">
