Added more images to the site banner

--- a/index.html
+++ b/index.html
@@ -82,16 +82,16 @@
                 <img src="images/gtr-35.jpg" alt="">
             </div>
             <div class="banner-img">
-                <img src="images/porshe.jpg" alt="">
+                <img src="images/R8.jpg" alt="">
             </div>
             <div class="banner-img">
                 <img src="images/lamborghini-huracan.jpg" alt="">
             </div>
             <div class="banner-img">
-                <img src="images/gtr-35.jpg" alt="">
+                <img src="images/BMW M8.jpg" alt="">
             </div>
             <div class="banner-img">
-                <img src="images/porshe.jpg" alt="">
+                <img src="images/mercedes-gt.webp" alt="">
             </div>
             <div class="banner-img">
                 <img src="images/photo-1577714141096-bf2b9e69500a.webp" alt="">
