Added preloading for the first images of the banner

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick-theme.css" />
+    <link rel="preload" as="image" href="images/porshe.jpg">
+    <link rel="preload" as="image" href="images/gtr-35.jpg">
+    <link rel="preload" as="image" href="images/R8.jpg">
+    <link rel="preload" as="image" href="images/lamborghini-huracan.jpg">
 </head>
 
 <body>
