Reduced image sizes

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             </nav>
         </nav>
     </header>
+    <script src="mobile-menu.js"></script>
     <script>
         var hamburgerButton = document.getElementById('hamburgerButton');
 
@@ -93,13 +94,14 @@
                 <img src="images/BMW M8.jpg" alt="">
             </div>
             <div class="banner-img">
-                <img src="images/mercedes-gt.webp" alt="">
+                <img src="images/mercedes-gt.jpg" alt="">
             </div>
             <div class="banner-img">
-                <img src="images/photo-1577714141096-bf2b9e69500a.webp" alt="">
+                <img src="images/photo-1577714141096-bf2b9e69500a.jpg" alt="">
             </div>
         </div>
     </div>
+    <script src="banner-animation.js"></script>
     <div class="info-section">
         <h1>Danov's Auto Show</h1>
         <div class="paragraphs">
@@ -200,8 +202,6 @@
             <p>&copy; 2023 Danov's Auto Show. All rights reserved.</p>
         </div>
     </footer>
-    <script src="mobile-menu.js"></script>
-    <script src="banner-animation.js" async></script>
 </body>
 
 </html>
