Converted banner images to webp

--- a/index.html
+++ b/index.html
@@ -82,25 +82,25 @@
     <div class="site-banner">
         <div class="site-banner-inner">
             <div class="banner-img">
-                <img src="images/porshe.jpg" alt="">
+                <img src="images/porshe.webp" alt="">
             </div>
             <div class="banner-img">
-                <img src="images/gtr-35.jpg" alt="">
+                <img src="images/gtr-35.webp" alt="">
             </div>
             <div class="banner-img R8">
-                <img src="images/R8.jpg" alt="">
+                <img src="images/R8.webp" alt="">
             </div>
             <div class="banner-img">
-                <img src="images/lamborghini-huracan.jpg" alt="">
+                <img src="images/lamborghini-huracan.webp" alt="">
             </div>
             <div class="banner-img">
-                <img src="images/BMW M8.jpg" alt="">
+                <img src="images/BMW-M8.webp" alt="">
             </div>
             <div class="banner-img">
-                <img src="images/mercedes-gt.jpg" alt="">
+                <img src="images/mercedes-gt.webp" alt="">
             </div>
             <div class="banner-img">
-                <img src="images/photo-1577714141096-bf2b9e69500a.jpg" alt="">
+                <img src="images/photo-1577714141096-bf2b9e69500a.webp" alt="">
             </div>
         </div>
     </div>
