reduced images sizes again

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick-theme.css" />
-    <link rel="preload" as="image" href="images/porshe.jpg">
-    <link rel="preload" as="image" href="images/gtr-35.jpg">
-    <link rel="preload" as="image" href="images/R8.jpg">
-    <link rel="preload" as="image" href="images/lamborghini-huracan.jpg">
-    <link rel="preload" as="image" href="images/photo-1577714141096-bf2b9e69500a.jpg">
-    <link rel="preload" as="image" href="images/mercedes-gt.jpg">
-    <link rel="preload" as="image" href="images/BMW M8.jpg">
+    <link rel="preload" as="image" href="images/porshe.webp">
+    <link rel="preload" as="image" href="images/gtr-35.webp">
+    <link rel="preload" as="image" href="images/R8.webp">
+    <link rel="preload" as="image" href="images/lamborghini-huracan.webp">
+    <link rel="preload" as="image" href="images/photo-1577714141096-bf2b9e69500a.webp">
+    <link rel="preload" as="image" href="images/mercedes-gt.webp">
+    <link rel="preload" as="image" href="images/BMW-M8.webp">
 </head>
 
 <body>
