--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
             </div>
         </div>
     </div>
+    <script src="banner-animation.js" async></script>
     <div class="info-section">
         <h1>Danov's Auto Show</h1>
         <div class="paragraphs">
@@ -218,7 +219,6 @@
             <p>&copy; 2023 Danov's Auto Show. All rights reserved.</p>
         </div>
     </footer>
-    <script src="banner-animation.js" defer></script>
 </body>
 
 </html>
